# marketplace_scraper

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg
parsers/: abc_class.py  data_parser.py  url_parser.py
