[tool.poetry]
name = "marketplace-scraper"
version = "0.1.0"
description = "Small demonstration project on web scraping"
authors = ["Alexandr Abramov <https://github.com/Abramov0Alexandr>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.4"
httpx = "^0.26.0"


[tool.poetry.group.linters.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-pygments = "^2.17.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
show_error_codes = true
no_implicit_optional = true


[[tool.mypy.overrides]]
module = [
"requests", 'httpx', 'bs4'
]
ignore_missing_imports = true
